Make output format consistent for training and transfer learning.

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -728,12 +728,12 @@
         "    MOD = MLPclassic(par)\n",
         "\n",
         "    MOD.initialOptimiser()\n",
-        "    L_tr=np.zeros([par.nEpochs])\n",
-        "    A_trTa=np.zeros([par.nEpochs])\n",
-        "    A_trClCe=np.zeros([par.nEpochs])\n",
-        "    L_val=np.zeros([par.nEpochs])\n",
-        "    A_valTa=np.zeros([par.nEpochs])\n",
-        "    A_valClCe=np.zeros([par.nEpochs])\n",
+        "    L_tr = []; L_tr.append(np.zeros([par.nEpochs]))\n",
+        "    A_trTa = []; A_trTa.append(np.zeros([par.nEpochs]))\n",
+        "    A_trClCe = []; A_trClCe.append(np.zeros([par.nEpochs]))\n",
+        "    L_val = []; L_val.append(np.zeros([par.nEpochs]))\n",
+        "    A_valTa = []; A_valTa.append(np.zeros([par.nEpochs]))\n",
+        "    A_valClCe = []; A_valClCe.append(np.zeros([par.nEpochs]))\n",
         "\n",
         "    print('**********************START TRAINING')\n",
         "    t=time.time()\n",
@@ -777,9 +777,9 @@
         "        #####\n",
         "        \n",
         "        # Store loss and accuracy\n",
-        "        L_tr[n]=np.copy(np.array(loss.to('cpu').detach()))\n",
-        "        A_trTa[n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
-        "        A_trClCe[n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
+        "        L_tr[0][n]=np.copy(np.array(loss.to('cpu').detach()))\n",
+        "        A_trTa[0][n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
+        "        A_trClCe[0][n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
         "\n",
         "        # Store weight changes for effective learning rate\n",
         "        if par.saveFlag_DW and (n%save_every)<1:\n",
@@ -821,9 +821,9 @@
         "            loss, accValTa, accValClCe = MOD.getLossAccuracy()\n",
         "            \n",
         "            # Store loss and accuracy\n",
-        "            L_val[n]=np.copy(np.array(loss.to('cpu').detach()))\n",
-        "            A_valTa[n]=np.copy(np.array(accValTa.to('cpu').detach()))\n",
-        "            A_valClCe[n]=np.copy(np.array(accValClCe.to('cpu').detach()))\n",
+        "            L_val[0][n]=np.copy(np.array(loss.to('cpu').detach()))\n",
+        "            A_valTa[0][n]=np.copy(np.array(accValTa.to('cpu').detach()))\n",
+        "            A_valClCe[0][n]=np.copy(np.array(accValClCe.to('cpu').detach()))\n",
         "\n",
         "        # Update learning rate\n",
         "        MOD.iniOpt.param_groups[0]['lr'] = par.etaInitial * np.exp(-float(n)/par.eta_tau)\n",
@@ -1366,13 +1366,13 @@
         "    MOD.metricOptimiser()\n",
         "\n",
         "    ### Init memory for saving data\n",
-        "    L_tr=np.zeros([par.nEpochs])\n",
-        "    A_trTa=np.zeros([par.nEpochs])\n",
-        "    A_trClCe=np.zeros([par.nEpochs])\n",
-        "    L_val=np.zeros([par.nEpochs])\n",
-        "    A_valTa=np.zeros([par.nEpochs])\n",
-        "    A_valClCe=np.zeros([par.nEpochs])\n",
-        "\n",
+        "    L_tr = []; L_tr.append(np.zeros([par.nEpochs]))\n",
+        "    A_trTa = []; A_trTa.append(np.zeros([par.nEpochs]))\n",
+        "    A_trClCe = []; A_trClCe.append(np.zeros([par.nEpochs]))\n",
+        "    L_val = []; L_val.append(np.zeros([par.nEpochs]))\n",
+        "    A_valTa = []; A_valTa.append(np.zeros([par.nEpochs]))\n",
+        "    A_valClCe = []; A_valClCe.append(np.zeros([par.nEpochs]))\n",
+        "    \n",
         "    print('**********************START TRAINING')\n",
         "    t=time.time()\n",
         "\n",
@@ -1415,9 +1415,9 @@
         "        ####\n",
         "\n",
         "        # Store training loss and accuracy\n",
-        "        L_tr[n]=np.copy(np.array(loss.to('cpu').detach()))\n",
-        "        A_trTa[n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
-        "        A_trClCe[n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
+        "        L_tr[0][n]=np.copy(np.array(loss.to('cpu').detach()))\n",
+        "        A_trTa[0][n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
+        "        A_trClCe[0][n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
         "\n",
         "        # Store weight changes for effective learning rate\n",
         "        if par.saveFlag_DW and (n%save_every)<1:\n",
@@ -1457,9 +1457,9 @@
         "            loss, accValTa, accValClCe = MOD.getLossAccuracy('metric',r)\n",
         "\n",
         "            # Store training loss and accuracy\n",
-        "            L_val[n]=np.copy(np.array(loss.to('cpu').detach()))\n",
-        "            A_valTa[n]=np.copy(np.array(accValTa.to('cpu').detach()))\n",
-        "            A_valClCe[n]=np.copy(np.array(accValClCe.to('cpu').detach()))\n",
+        "            L_val[0][n]=np.copy(np.array(loss.to('cpu').detach()))\n",
+        "            A_valTa[0][n]=np.copy(np.array(accValTa.to('cpu').detach()))\n",
+        "            A_valClCe[0][n]=np.copy(np.array(accValClCe.to('cpu').detach()))\n",
         "\n",
         "        # Update learning rate\n",
         "        MOD.metOpt.param_groups[0]['lr'] = par.etaInitial * np.exp(-float(n)/par.eta_tau)\n",
@@ -1480,98 +1480,108 @@
         "    ###############################\n",
         "    #### Second phase of training\n",
         "    ###############################\n",
-        "    print('**********************START TRANSFER TRAINING')\n",
+        "    ### Init lists for saving data\n",
+        "    outL_tr = []\n",
+        "    outA_trTa = []\n",
+        "    outA_trClCe = []\n",
+        "    outL_val = []\n",
+        "    outA_valTa = []\n",
+        "    outA_valClCe = []\n",
+        "    wTran = []\n",
         "    \n",
-        "    # Init memory to save responses\n",
-        "    resp_saveind = 0\n",
-        "    if par.saveFlag_RESP:\n",
-        "        outRESP = []\n",
-        "        for layer in range(par.maxLayer+1,len(MOD.Ns)):\n",
-        "            outRESP.append(np.zeros((len(par.saveRespAtN)+1, par.nClass * par.nSaveSamples, par.Ns[layer], tMax))) \n",
+        "    for m in range(par.nTransferRuns):\n",
+        "        print('**********************START TRANSFER TRAINING')\n",
+        "        \n",
+        "        # Init memory to save responses\n",
+        "        resp_saveind = 0\n",
+        "        if par.saveFlag_RESP:\n",
+        "            outRESP = []\n",
+        "            for layer in range(par.maxLayer+1,len(MOD.Ns)):\n",
+        "                outRESP.append(np.zeros((len(par.saveRespAtN)+1, par.nClass * par.nSaveSamples, par.Ns[layer], tMax))) \n",
         "\n",
-        "    ### Init memory for saving data\n",
-        "    outL_tr=np.zeros([par.nEpisodesOut])\n",
-        "    outA_trTa=np.zeros([par.nEpisodesOut])\n",
-        "    outA_trClCe=np.zeros([par.nEpisodesOut])\n",
-        "    outL_val=np.zeros([par.nEpisodesOut])\n",
-        "    outA_valTa=np.zeros([par.nEpisodesOut])\n",
-        "    outA_valClCe=np.zeros([par.nEpisodesOut])\n",
+        "        ### Init memory for saving data\n",
+        "        outL_tr.append(np.zeros([par.nEpisodesOut]))\n",
+        "        outA_trTa.append(np.zeros([par.nEpisodesOut]))\n",
+        "        outA_trClCe.append(np.zeros([par.nEpisodesOut]))\n",
+        "        outL_val.append(np.zeros([par.nEpisodesOut]))\n",
+        "        outA_valTa.append(np.zeros([par.nEpisodesOut]))\n",
+        "        outA_valClCe.append(np.zeros([par.nEpisodesOut]))\n",
         "\n",
-        "    MOD.maxLayer = len(MOD.Ns)-1\n",
-        "    MOD.lossLayer = MOD.maxLayer\n",
+        "        MOD.maxLayer = len(MOD.Ns)-1\n",
+        "        MOD.lossLayer = MOD.maxLayer\n",
         "\n",
-        "    ### Initialise optimiser\n",
-        "    MOD.transferOptimiser()\n",
+        "        ### Initialise optimiser\n",
+        "        MOD.transferOptimiser()\n",
         "\n",
-        "    t=time.time()\n",
+        "        t=time.time()\n",
         "\n",
-        "    for n in range(par.nEpisodesOut):\n",
-        "        ### Save output responses before updates\n",
-        "        if par.saveFlag_RESP and (np.any(np.isin(n, par.saveRespAtN)) or n==(par.nEpisodesOut-1)):\n",
-        "            print(f'Saving response on iteration {n} of {par.nEpisodesOut}')\n",
-        "            with torch.no_grad():\n",
-        "                s = X_tr[0][0:par.nSaveSamples,:]\n",
-        "                for k in range(1,par.nClass):\n",
-        "                    s = torch.concat([s, X_tr[k][0:par.nSaveSamples,:]],0)\n",
-        "                resp = MOD.responseSave(s, range(par.maxLayer+1,len(par.Ns)))\n",
-        "                for li, l in enumerate(range(par.maxLayer+1,len(par.Ns))):\n",
-        "                    outRESP[li][resp_saveind,:,:,:] = resp[li].numpy()\n",
-        "            resp_saveind += 1\n",
+        "        for n in range(par.nEpisodesOut):\n",
+        "            ### Save output responses before updates\n",
+        "            if par.saveFlag_RESP and (np.any(np.isin(n, par.saveRespAtN)) or n==(par.nEpisodesOut-1)):\n",
+        "                print(f'Saving response on iteration {n} of {par.nEpisodesOut}')\n",
+        "                with torch.no_grad():\n",
+        "                    s = X_tr[0][0:par.nSaveSamples,:]\n",
+        "                    for k in range(1,par.nClass):\n",
+        "                        s = torch.concat([s, X_tr[k][0:par.nSaveSamples,:]],0)\n",
+        "                    resp = MOD.responseSave(s, range(par.maxLayer+1,len(par.Ns)))\n",
+        "                    for li, l in enumerate(range(par.maxLayer+1,len(par.Ns))):\n",
+        "                        outRESP[li][resp_saveind,:,:,:] = resp[li].numpy()\n",
+        "                resp_saveind += 1\n",
         "\n",
-        "        ### Training data\n",
-        "        # Prepare batch\n",
-        "        Im = MOD.generateBatch('simple', X_tr)\n",
-        "\n",
-        "        # Get response to input\n",
-        "        r = MOD.response(Im, -1)\n",
-        "\n",
-        "        # Compute training loss and accuracy\n",
-        "        loss, accTrTa, accClCe = MOD.getLossAccuracy('transfer', r[-1], backwardFlag=True, opt=MOD.tranOpt)\n",
-        "        # print(f'mean gradient is {torch.mean(MOD.Ws[-1].grad)}')\n",
-        "        #####\n",
-        "        ##### CHECKING FOR NANS\n",
-        "        # if torch.any(torch.isnan(MOD.x[-1])):\n",
-        "        #     print(f'Quitting at batch {n} of {par.nEpisodesOut}')\n",
-        "        #     return -1\n",
-        "        #####\n",
-        "        #####\n",
-        "\n",
-        "        # Store loss and accuracy\n",
-        "        outL_tr[n]=np.copy(np.array(loss.to('cpu').detach()))\n",
-        "        outA_trTa[n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
-        "        outA_trClCe[n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
-        "            \n",
-        "        ### Validation data\n",
-        "        with torch.no_grad():\n",
+        "            ### Training data\n",
         "            # Prepare batch\n",
-        "            Im = MOD.generateBatch('simple', X_val)\n",
-        "    \n",
-        "            # Get response to input\n",
-        "            r = MOD.response(Im, -1)    \n",
+        "            Im = MOD.generateBatch('simple', X_tr)\n",
         "\n",
-        "            # Compute validation loss and accuracy\n",
-        "            loss,accValTa,accValClCe = MOD.getLossAccuracy('transfer',r[-1])\n",
+        "            # Get response to input\n",
+        "            r = MOD.response(Im, -1)\n",
+        "\n",
+        "            # Compute training loss and accuracy\n",
+        "            loss, accTrTa, accClCe = MOD.getLossAccuracy('transfer', r[-1], backwardFlag=True, opt=MOD.tranOpt)\n",
+        "            # print(f'mean gradient is {torch.mean(MOD.Ws[-1].grad)}')\n",
+        "            #####\n",
+        "            ##### CHECKING FOR NANS\n",
+        "            # if torch.any(torch.isnan(MOD.x[-1])):\n",
+        "            #     print(f'Quitting at batch {n} of {par.nEpisodesOut}')\n",
+        "            #     return -1\n",
+        "            #####\n",
+        "            #####\n",
         "\n",
         "            # Store loss and accuracy\n",
-        "            outL_val[n] = np.copy(np.array(loss.to('cpu').detach()))\n",
-        "            outA_valTa[n] = np.copy(np.array(accValTa.to('cpu').detach()))\n",
-        "            outA_valClCe[n] = np.copy(np.array(accValClCe.to('cpu').detach()))\n",
+        "            outL_tr[m][n]=np.copy(np.array(loss.to('cpu').detach()))\n",
+        "            outA_trTa[m][n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
+        "            outA_trClCe[m][n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
+        "                \n",
+        "            ### Validation data\n",
+        "            with torch.no_grad():\n",
+        "                # Prepare batch\n",
+        "                Im = MOD.generateBatch('simple', X_val)\n",
+        "        \n",
+        "                # Get response to input\n",
+        "                r = MOD.response(Im, -1)    \n",
         "\n",
-        "        # Update learning rate\n",
-        "        MOD.tranOpt.param_groups[0]['lr'] = par.etaTransfer * np.exp(-float(n)/par.eta_tau)\n",
+        "                # Compute validation loss and accuracy\n",
+        "                loss,accValTa,accValClCe = MOD.getLossAccuracy('transfer',r[-1])\n",
         "\n",
-        "        if (n%par.reportTime==0) and (n>0):\n",
-        "            print(f'Time per stage: {time.time()-t}')\n",
-        "            mseTr_mean=np.mean(outL_tr[n-par.reportTime:n])\n",
-        "            accTrTa_mean=np.mean(outA_trTa[n-par.reportTime:n])\n",
-        "            accTrClCe_mean=np.mean(outA_trClCe[n-par.reportTime:n])\n",
-        "            mseVal_mean=np.mean(outL_val[n-par.reportTime:n])\n",
-        "            accValTa_mean=np.mean(outA_valTa[n-par.reportTime:n])\n",
-        "            accValClCe_mean=np.mean(outA_valClCe[n-par.reportTime:n])\n",
-        "            t=time.time()\n",
-        "            \n",
-        "            print(f'Progress: {np.float32(n)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
-        "            print(f'Progress:                                                                                           Mean Tr AccClCe: {accTrClCe_mean}, Mean Val AccClCe: {accValClCe_mean}')\n",
+        "                # Store loss and accuracy\n",
+        "                outL_val[m][n] = np.copy(np.array(loss.to('cpu').detach()))\n",
+        "                outA_valTa[m][n] = np.copy(np.array(accValTa.to('cpu').detach()))\n",
+        "                outA_valClCe[m][n] = np.copy(np.array(accValClCe.to('cpu').detach()))\n",
+        "\n",
+        "            # Update learning rate\n",
+        "            MOD.tranOpt.param_groups[0]['lr'] = par.etaTransfer * np.exp(-float(n)/par.eta_tau)\n",
+        "\n",
+        "            if (n%par.reportTime==0) and (n>0):\n",
+        "                print(f'Time per stage: {time.time()-t}')\n",
+        "                mseTr_mean=np.mean(outL_tr[n-par.reportTime:n])\n",
+        "                accTrTa_mean=np.mean(outA_trTa[n-par.reportTime:n])\n",
+        "                accTrClCe_mean=np.mean(outA_trClCe[n-par.reportTime:n])\n",
+        "                mseVal_mean=np.mean(outL_val[n-par.reportTime:n])\n",
+        "                accValTa_mean=np.mean(outA_valTa[n-par.reportTime:n])\n",
+        "                accValClCe_mean=np.mean(outA_valClCe[n-par.reportTime:n])\n",
+        "                t=time.time()\n",
+        "                \n",
+        "                print(f'Progress: {np.float32(n)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
+        "                print(f'Progress:                                                                                           Mean Tr AccClCe: {accTrClCe_mean}, Mean Val AccClCe: {accValClCe_mean}')\n",
         "\n",
         "\n",
         "    ### Save outputs\n",
@@ -1748,7 +1758,13 @@
         "nSeeds = 5 # No. runs per hyperparameter\n",
         "seeds = list(sp.primerange(11111,33333))[0:nSeeds] # RNG seeds\n",
         "experiment = 'swLR'\n",
-        "modName = 'out2triFB2'\n",
+        "losstype = 'prototypicalLoss'\n",
+        "if losstype=='tripletLoss':\n",
+        "    lossSuffix = 'tri'\n",
+        "elif losstype=='tripletLoss':\n",
+        "    lossSuffix = 'pro'\n",
+        "\n",
+        "modName = 'out2'+lossSuffix+'FB2'\n",
         "expNameSuffix = modName+'_'+experiment+'_'\n",
         "complete = torch.zeros((len(swLR), len(seeds)))\n",
         "for j, lr in enumerate(swLR):\n",
@@ -1761,6 +1777,7 @@
         "        np.random.default_rng(sd)\n",
         "        # Update hyperparameter\n",
         "        importlib.reload(par)\n",
+        "        par.metricLossType = 'prototypicalLoss'\n",
         "        par.etaInitial = swLR[j]\n",
         "        par.fbLayer = 2\n",
         "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
@@ -1773,7 +1790,7 @@
         "\n",
         "print('*******************************FINISHED FB2********************************')\n",
         "\n",
-        "modName = 'out2triFB1'\n",
+        "modName = 'out2'+lossSuffix+'FB1'\n",
         "expNameSuffix = modName+'_'+experiment+'_'\n",
         "complete = torch.zeros((len(swLR), len(seeds)))\n",
         "for j, lr in enumerate(swLR):\n",
@@ -1786,6 +1803,7 @@
         "        np.random.default_rng(sd)\n",
         "        # Update hyperparameter\n",
         "        importlib.reload(par)\n",
+        "        par.metricLossType = 'prototypicalLoss'\n",
         "        par.etaInitial = swLR[j]\n",
         "        par.fbLayer = 1\n",
         "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
@@ -1798,7 +1816,7 @@
         "\n",
         "print('*******************************FINISHED FB1********************************')\n",
         "\n",
-        "modName = 'out2triFB0'\n",
+        "modName = 'out2'+lossSuffix+'FB0'\n",
         "expNameSuffix = modName+'_'+experiment+'_'\n",
         "complete = torch.zeros((len(swLR), len(seeds)))\n",
         "for j, lr in enumerate(swLR):\n",
@@ -1811,6 +1829,7 @@
         "        np.random.default_rng(sd)\n",
         "        # Update hyperparameter\n",
         "        importlib.reload(par)\n",
+        "        par.metricLossType = 'prototypicalLoss'\n",
         "        par.etaInitial = swLR[j]\n",
         "        par.fbLayer = []\n",
         "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
@@ -2219,9 +2238,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python [conda env:venv] *",
+      "display_name": "venv",
       "language": "python",
-      "name": "conda-env-venv-py"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
