Updated metric learning to run multiple instances of transfer learning.

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -830,12 +830,12 @@
         "\n",
         "        if (n%par.reportTime==0) and (n>0):\n",
         "            print(f'Time per stage: {time.time()-t}')\n",
-        "            mseTr_mean=np.mean(L_tr[n-par.reportTime:n])\n",
-        "            accTrTa_mean=np.mean(A_trTa[n-par.reportTime:n])\n",
-        "            accTrClCe_mean=np.mean(A_trClCe[n-par.reportTime:n])\n",
-        "            mseVal_mean=np.mean(L_val[n-par.reportTime:n])\n",
-        "            accValTa_mean=np.mean(A_valTa[n-par.reportTime:n])\n",
-        "            accValClCe_mean=np.mean(A_valClCe[n-par.reportTime:n])\n",
+        "            mseTr_mean=np.mean(L_tr[0][n-par.reportTime:n])\n",
+        "            accTrTa_mean=np.mean(A_trTa[0][n-par.reportTime:n])\n",
+        "            accTrClCe_mean=np.mean(A_trClCe[0][n-par.reportTime:n])\n",
+        "            mseVal_mean=np.mean(L_val[0][n-par.reportTime:n])\n",
+        "            accValTa_mean=np.mean(A_valTa[0][n-par.reportTime:n])\n",
+        "            accValClCe_mean=np.mean(A_valClCe[0][n-par.reportTime:n])\n",
         "            t=time.time()\n",
         "            \n",
         "            print(f'Progress: {np.float32(n)/np.float32(par.nEpochs)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
@@ -971,12 +971,12 @@
         "\n",
         "            if (n%par.reportTime==0) and (n>0):\n",
         "                print(f'Time per stage: {time.time()-t}')\n",
-        "                mseTr_mean=np.mean(outL_tr[n-par.reportTime:n])\n",
-        "                accTrTa_mean=np.mean(outA_trTa[n-par.reportTime:n])\n",
-        "                accTrClCe_mean=np.mean(outA_trClCe[n-par.reportTime:n])\n",
-        "                mseVal_mean=np.mean(outL_val[n-par.reportTime:n])\n",
-        "                accValTa_mean=np.mean(outA_valTa[n-par.reportTime:n])\n",
-        "                accValClCe_mean=np.mean(outA_valClCe[n-par.reportTime:n])\n",
+        "                mseTr_mean=np.mean(outL_tr[m][n-par.reportTime:n])\n",
+        "                accTrTa_mean=np.mean(outA_trTa[m][n-par.reportTime:n])\n",
+        "                accTrClCe_mean=np.mean(outA_trClCe[m][n-par.reportTime:n])\n",
+        "                mseVal_mean=np.mean(outL_val[m][n-par.reportTime:n])\n",
+        "                accValTa_mean=np.mean(outA_valTa[m][n-par.reportTime:n])\n",
+        "                accValClCe_mean=np.mean(outA_valClCe[m][n-par.reportTime:n])\n",
         "                t=time.time()\n",
         "                \n",
         "                print(f'Progress: {np.float32(n)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
@@ -1466,12 +1466,12 @@
         "\n",
         "        if (n%par.reportTime==0) and (n>0):\n",
         "            print(f'Time per stage: {time.time()-t}')\n",
-        "            mseTr_mean=np.mean(L_tr[n-par.reportTime:n])\n",
-        "            accTrTa_mean=np.mean(A_trTa[n-par.reportTime:n])\n",
-        "            accTrClCe_mean=np.mean(A_trClCe[n-par.reportTime:n])\n",
-        "            mseVal_mean=np.mean(L_val[n-par.reportTime:n])\n",
-        "            accValTa_mean=np.mean(A_valTa[n-par.reportTime:n])\n",
-        "            accValClCe_mean=np.mean(A_valClCe[n-par.reportTime:n])\n",
+        "            mseTr_mean=np.mean(L_tr[0][n-par.reportTime:n])\n",
+        "            accTrTa_mean=np.mean(A_trTa[0][n-par.reportTime:n])\n",
+        "            accTrClCe_mean=np.mean(A_trClCe[0][n-par.reportTime:n])\n",
+        "            mseVal_mean=np.mean(L_val[0][n-par.reportTime:n])\n",
+        "            accValTa_mean=np.mean(A_valTa[0][n-par.reportTime:n])\n",
+        "            accValClCe_mean=np.mean(A_valClCe[0][n-par.reportTime:n])\n",
         "            t=time.time()\n",
         "            \n",
         "            print(f'Progress: {np.float32(n)/np.float32(par.nEpochs)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
@@ -1572,12 +1572,12 @@
         "\n",
         "            if (n%par.reportTime==0) and (n>0):\n",
         "                print(f'Time per stage: {time.time()-t}')\n",
-        "                mseTr_mean=np.mean(outL_tr[n-par.reportTime:n])\n",
-        "                accTrTa_mean=np.mean(outA_trTa[n-par.reportTime:n])\n",
-        "                accTrClCe_mean=np.mean(outA_trClCe[n-par.reportTime:n])\n",
-        "                mseVal_mean=np.mean(outL_val[n-par.reportTime:n])\n",
-        "                accValTa_mean=np.mean(outA_valTa[n-par.reportTime:n])\n",
-        "                accValClCe_mean=np.mean(outA_valClCe[n-par.reportTime:n])\n",
+        "                mseTr_mean=np.mean(outL_tr[m][n-par.reportTime:n])\n",
+        "                accTrTa_mean=np.mean(outA_trTa[m][n-par.reportTime:n])\n",
+        "                accTrClCe_mean=np.mean(outA_trClCe[m][n-par.reportTime:n])\n",
+        "                mseVal_mean=np.mean(outL_val[m][n-par.reportTime:n])\n",
+        "                accValTa_mean=np.mean(outA_valTa[m][n-par.reportTime:n])\n",
+        "                accValClCe_mean=np.mean(outA_valClCe[m][n-par.reportTime:n])\n",
         "                t=time.time()\n",
         "                \n",
         "                print(f'Progress: {np.float32(n)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
@@ -1631,10 +1631,13 @@
         "par.etaTransfer = 0.001\n",
         "par.fbLayer = 2\n",
         "par.saveFlag_FBWeights = True\n",
-        "par.nEpochs = 1000\n",
-        "par.nEpisodesOut = 1000\n",
+        "par.nEpochs = 500\n",
+        "par.nEpisodesOut = 500\n",
+        "par.reportTime = 50\n",
         "par.maxLayer = 2\n",
         "par.lossLayer = 2\n",
+        "# par.maxLayer = len(par.Ns)-1\n",
+        "# par.lossLayer = len(par.Ns)-1\n",
         "par.nSaveMaxT = par.nEpochs \n",
         "par.metricLossType = 'prototypicalLoss'\n",
         "expName = 'test'\n",
@@ -1660,7 +1663,7 @@
       "source": [
         "### Define parameters\n",
         "swLR = np.logspace(-15/3,-7/3,5) # Sweep over these learning rates\n",
-        "nSeeds = 5 # No. runs per hyperparameter\n",
+        "nSeeds = 2 # No. runs per hyperparameter\n",
         "seeds = list(sp.primerange(11111,33333))[0:nSeeds] # RNG seeds\n",
         "modName = 'out2FB2'\n",
         "experiment = 'swLR'\n",
@@ -1734,6 +1737,95 @@
         "completeName = directory+'/data/'+expNameSuffix+'0/complete.pt'\n",
         "torch.save(complete, completeName)\n",
         "\n",
+        "print('*******************************FINISHED FB0********************************')\n",
+        "\n",
+        "### Define parameters\n",
+        "swLR = np.logspace(-15/3,-7/3,5) # Sweep over these learning rates\n",
+        "nSeeds = 2 # No. runs per hyperparameter\n",
+        "seeds = list(sp.primerange(11111,33333))[0:nSeeds] # RNG seeds\n",
+        "experiment = 'swLR'\n",
+        "losstype = 'prototypicalLoss'\n",
+        "if losstype=='tripletLoss':\n",
+        "    lossSuffix = 'tri'\n",
+        "elif losstype=='prototypicalLoss':\n",
+        "    lossSuffix = 'pro'\n",
+        "\n",
+        "modName = 'out2'+lossSuffix+'FB2'\n",
+        "expNameSuffix = modName+'_'+experiment+'_'\n",
+        "complete = torch.zeros((len(swLR), len(seeds)))\n",
+        "for j, lr in enumerate(swLR):\n",
+        "    # if j!=0:\n",
+        "    #     continue\n",
+        "    for k, sd in enumerate(seeds):\n",
+        "        t = time.time()\n",
+        "        # Init RNG\n",
+        "        torch.manual_seed(sd)\n",
+        "        np.random.default_rng(sd)\n",
+        "        # Update hyperparameter\n",
+        "        importlib.reload(par)\n",
+        "        par.metricLossType = 'prototypicalLoss'\n",
+        "        par.etaInitial = swLR[j]\n",
+        "        par.fbLayer = 2\n",
+        "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
+        "        expName = expNameSuffix+str(j)\n",
+        "        complete[j, k] = metric_esn_fb(expName, sd)\n",
+        "        print(f'j={j}/{len(swLR)};     k={k}/{len(seeds)}')\n",
+        "        print(f'*************************metFB2 Run time: {time.time()-t}')\n",
+        "completeName = directory+'/data/'+expNameSuffix+'0/complete.pt'\n",
+        "torch.save(complete, completeName)\n",
+        "\n",
+        "print('*******************************FINISHED FB2********************************')\n",
+        "\n",
+        "modName = 'out2'+lossSuffix+'FB1'\n",
+        "expNameSuffix = modName+'_'+experiment+'_'\n",
+        "complete = torch.zeros((len(swLR), len(seeds)))\n",
+        "for j, lr in enumerate(swLR):\n",
+        "    # if j!=0:\n",
+        "    #     continue\n",
+        "    for k, sd in enumerate(seeds):\n",
+        "        t = time.time()\n",
+        "        # Init RNG\n",
+        "        torch.manual_seed(sd)\n",
+        "        np.random.default_rng(sd)\n",
+        "        # Update hyperparameter\n",
+        "        importlib.reload(par)\n",
+        "        par.metricLossType = 'prototypicalLoss'\n",
+        "        par.etaInitial = swLR[j]\n",
+        "        par.fbLayer = 1\n",
+        "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
+        "        expName = expNameSuffix+str(j)\n",
+        "        complete[j, k] = metric_esn_fb(expName, sd)\n",
+        "        print(f'j={j}/{len(swLR)};     k={k}/{len(seeds)}')\n",
+        "        print(f'*************************metFB1 Run time: {time.time()-t}')\n",
+        "completeName = directory+'/data/'+expNameSuffix+'0/complete.pt'\n",
+        "torch.save(complete, completeName)\n",
+        "\n",
+        "print('*******************************FINISHED FB1********************************')\n",
+        "\n",
+        "modName = 'out2'+lossSuffix+'FB0'\n",
+        "expNameSuffix = modName+'_'+experiment+'_'\n",
+        "complete = torch.zeros((len(swLR), len(seeds)))\n",
+        "for j, lr in enumerate(swLR):\n",
+        "    # if j!=0:\n",
+        "    #     continue\n",
+        "    for k, sd in enumerate(seeds):\n",
+        "        t = time.time()\n",
+        "        # Init RNG\n",
+        "        torch.manual_seed(sd)\n",
+        "        np.random.default_rng(sd)\n",
+        "        # Update hyperparameter\n",
+        "        importlib.reload(par)\n",
+        "        par.metricLossType = 'prototypicalLoss'\n",
+        "        par.etaInitial = swLR[j]\n",
+        "        par.fbLayer = []\n",
+        "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
+        "        expName = expNameSuffix+str(j)\n",
+        "        complete[j, k] = metric_esn_fb(expName, sd)\n",
+        "        print(f'j={j}/{len(swLR)};     k={k}/{len(seeds)}')\n",
+        "        print(f'*************************metFB0 Run time: {time.time()-t}')\n",
+        "completeName = directory+'/data/'+expNameSuffix+'0/complete.pt'\n",
+        "torch.save(complete, completeName)\n",
+        "\n",
         "print('*******************************FINISHED FB0********************************')"
       ]
     },
@@ -1755,13 +1847,13 @@
       "source": [
         "### Define parameters\n",
         "swLR = np.logspace(-15/3,-7/3,5) # Sweep over these learning rates\n",
-        "nSeeds = 5 # No. runs per hyperparameter\n",
+        "nSeeds = 2 # No. runs per hyperparameter\n",
         "seeds = list(sp.primerange(11111,33333))[0:nSeeds] # RNG seeds\n",
         "experiment = 'swLR'\n",
         "losstype = 'prototypicalLoss'\n",
         "if losstype=='tripletLoss':\n",
         "    lossSuffix = 'tri'\n",
-        "elif losstype=='tripletLoss':\n",
+        "elif losstype=='prototypicalLoss':\n",
         "    lossSuffix = 'pro'\n",
         "\n",
         "modName = 'out2'+lossSuffix+'FB2'\n",
@@ -2238,9 +2330,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "Python [conda env:venv] *",
       "language": "python",
-      "name": "python3"
+      "name": "conda-env-venv-py"
     },
     "language_info": {
       "codemirror_mode": {
