--- a/esn_feedback_ana.ipynb
+++ b/esn_feedback_ana.ipynb
@@ -449,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot training phase 1 accuracies"
+    "### Plot accuracies for multiple learning rates"
    ]
   },
   {
@@ -462,14 +462,23 @@
     "experiment = 'swLR'\n",
     "key = 'loadData'; dataName = 'accValTa'\n",
     "acc = esn_feedback_ana(key,modName=model,expName=experiment,dataName=dataName)\n",
+    "\n",
+    "# Concatenate runs for plotting\n",
+    "accpl = []\n",
+    "for j in range(len(acc)):\n",
+    "    accpl.append([])\n",
+    "    accpl[j] = np.zeros((acc[j][0][0].shape[0],len(acc[j])))\n",
+    "    for k in range(len(acc[j])):\n",
+    "        accpl[j][:,k] = acc[j][k][0]\n",
+    "\n",
     "key = 'plotAcc'; saveFlag = True; \n",
-    "esn_feedback_ana(key,acc=acc,saveFlag=saveFlag, figDir='./figs/swLR/', figName=dataName+'_'+model)\n",
+    "esn_feedback_ana(key,acc=accpl,saveFlag=saveFlag, figDir='./figs/swLR/', figName=dataName+'_'+model)\n",
     "\n",
     "# To estimate which LR to use for further analyses\n",
     "mx = 0; mxind = 0\n",
-    "for i in range(len(acc)):\n",
-    "    if np.size(acc[i])>0:\n",
-    "        mn = np.mean(np.mean(acc[i][-100:,:], axis=0))\n",
+    "for i in range(len(accpl)):\n",
+    "    if np.size(accpl[i])>0:\n",
+    "        mn = np.mean(np.mean(accpl[i][-100:,:], axis=0))\n",
     "        print(f'{i}: {mn}')\n",
     "        if mn>mx:\n",
     "            mx = mn; mxind = i\n",
@@ -492,33 +501,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modName = 'out2proFB2'\n",
-    "expName = 'swLR'\n",
-    "dataName = 'out_accValTa'\n",
-    "seed='11113'\n",
-    "baseDirName = '/home/jb739/sheffield/proj/esn_feedback/data/'+modName+'_'+expName\n",
-    "print(baseDirName)\n",
-    "print(baseDirName+'/'+dataName+'_'+seed+'.pt')\n",
-    "a = torch.load(baseDirName+'/'+dataName+'_'+seed+'.pt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "model = 'out2FB0'\n",
     "experiment = 'swLR'\n",
     "key = 'loadData'; dataName = 'out_accValTa'\n",
     "# load accuracies (nested lists, acc[#learning rates][#runs per LR][# transfer learning instances])\n",
     "acc = esn_feedback_ana(key,modName=model,expName=experiment,dataName=dataName)\n",
+    "# Concatenate runs for plotting\n",
     "accpl = []\n",
     "for j in range(len(acc)):\n",
     "    accpl.append([])\n",
     "    accpl[j] = np.zeros((acc[j][0][0].shape[0],len(acc[j])))\n",
     "    for k in range(len(acc[j])):\n",
     "        accpl[j][:,k] = acc[j][k][0]\n",
+    "\n",
     "key = 'plotAcc'; saveFlag = False; \n",
     "esn_feedback_ana(key,acc=accpl,saveFlag=saveFlag, figDir='./figs/swLR/', figName=dataName+'_'+model)\n",
     "\n",
@@ -563,7 +558,7 @@
    "outputs": [],
    "source": [
     "### Plot response examples\n",
-    "saveFlag=True; LR_index = 4; model = 'proFB2'; layer=2\n",
+    "saveFlag=False; LR_index = 3; model = 'out2proFB2'; layer=1\n",
     "# Load data\n",
     "experiment = 'swLR'; key = 'loadResp'; dataName = 'respSave11113'\n",
     "r = esn_feedback_ana(key,modName=model,expName=experiment,dataName=dataName,selectLR=LR_index,maxNSeeds=1,layer=layer)\n",
@@ -635,9 +630,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "w=torch.load('/home/jb739/sheffield/proj/esn_feedback/data/out2FB2_swLR_3/dw11117.pt')\n",
+    "fig = pl.figure(figsize=tuple(np.array((15.,15.))/2.54)); ax = pl.axes()\n",
+    "ax.spines[['top','right']].set_visible(False)\n",
+    "for j in range(len(w)):\n",
+    "    pl.plot(w[j][:,-1]/np.sum(w[j][:,-1]), c=[j/8,j/8,j/8])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "saveFlag = True\n",
-    "key = 'plotDW'; model = 'FB2'; experiment = 'swLR'\n",
-    "esn_feedback_ana(key, saveFlag=saveFlag, modName=model, expName=experiment, figDir='./figs/swLR/', layer=1, time=-1)"
+    "key = 'plotDW'; model = 'out2FB2'; experiment = 'swLR'\n",
+    "esn_feedback_ana(key, saveFlag=saveFlag, modName=model, expName=experiment, figDir='./figs/swLR/', layer=4, time=-1)"
    ]
   }
  ],
