--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -1639,17 +1639,17 @@
         "            # Update learning rate\n",
         "            MOD.tranOpt.param_groups[0]['lr'] = par.etaTransfer * np.exp(-float(n)/par.eta_tau)\n",
         "\n",
-        "            if (n%par.reportTime==0) and (n>0):\n",
+        "            if ((n+1)%(par.reportTime)<1) and (n>0):\n",
         "                print(f'Time per stage: {time.time()-t}')\n",
-        "                mseTr_mean=np.mean(outL_tr[m][n-par.reportTime:n])\n",
-        "                accTrTa_mean=np.mean(outA_trTa[m][n-par.reportTime:n])\n",
-        "                accTrClCe_mean=np.mean(outA_trClCe[m][n-par.reportTime:n])\n",
-        "                mseVal_mean=np.mean(outL_val[m][n-par.reportTime:n])\n",
-        "                accValTa_mean=np.mean(outA_valTa[m][n-par.reportTime:n])\n",
-        "                accValClCe_mean=np.mean(outA_valClCe[m][n-par.reportTime:n])\n",
+        "                mseTr_mean=np.mean(outL_tr[m][n+1-par.reportTime:n+1])\n",
+        "                accTrTa_mean=np.mean(outA_trTa[m][n+1-par.reportTime:n+1])\n",
+        "                accTrClCe_mean=np.mean(outA_trClCe[m][n+1-par.reportTime:n+1])\n",
+        "                mseVal_mean=np.mean(outL_val[m][n+1-par.reportTime:n+1])\n",
+        "                accValTa_mean=np.mean(outA_valTa[m][n+1-par.reportTime:n+1])\n",
+        "                accValClCe_mean=np.mean(outA_valClCe[m][n+1-par.reportTime:n+1])\n",
         "                t=time.time()\n",
         "                \n",
-        "                print(f'Progress: {np.float32(n)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
+        "                print(f'Progress: {np.float32(n+1)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
         "                print(f'Progress:                                                                                           Mean Tr AccClCe: {accTrClCe_mean}, Mean Val AccClCe: {accValClCe_mean}')\n",
         "\n",
         "\n",
@@ -1701,15 +1701,15 @@
         "par.etaTransfer = 0.001\n",
         "par.fbLayer = 2\n",
         "par.saveFlag_FBWeights = True\n",
-        "par.nEpochs = 500\n",
-        "par.nEpisodesOut = 500\n",
-        "par.reportTime = 50\n",
-        "par.Ns = [par.N_esn, 200, 200, 50, par.nClass] # No. neurons in each layer\n",
+        "par.nEpochs = 5000\n",
+        "par.nEpisodesOut = 5000\n",
+        "par.reportTime = 250\n",
+        "par.Ns = [par.N_esn, 100, 100, 50, par.nClass] # No. neurons in each layer\n",
         "par.nSaveMaxT = par.nEpochs \n",
         "par.metricLossType = 'prototypicalLoss'\n",
         "expName = 'test'\n",
-        "# xent_esn_fb(expName, seed)\n",
-        "metric_esn_fb(expName, seed)"
+        "xent_esn_fb(expName, seed)\n",
+        "# metric_esn_fb(expName, seed)"
       ]
     },
     {
@@ -2308,9 +2308,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "Python [conda env:venv] *",
       "language": "python",
-      "name": "python3"
+      "name": "conda-env-venv-py"
     },
     "language_info": {
       "codemirror_mode": {
