Explicitly freeze params during transfer learning (using requires_grad=False)

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -890,6 +890,11 @@
         "            for layer in range(MOD.tranFromLayer,len(par.Ns)):\n",
         "                outRESP.append(np.zeros((len(par.saveRespAtN)+1, par.nClass * par.nSaveSamples, par.Ns[layer], tMax))) \n",
         "\n",
+        "        ### Freeze earlier layers\n",
+        "        for layer in range(par.tranFromLayer-1):\n",
+        "            MOD.Ws[layer].requires_grad = False\n",
+        "            MOD.bs[layer].requires_grad = False\n",
+        "\n",
         "        ### Reset output layer weights\n",
         "        for layer in range(MOD.tranFromLayer,len(par.Ns)):\n",
         "            MOD.Ws[layer-1] = nn.Parameter((torch.randn([par.Ns[layer-1],par.Ns[layer]])/torch.sqrt(torch.tensor(par.Ns[layer-1]+par.Ns[layer]))).to(device))\n",
