Attempts to fine tune

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -609,8 +609,9 @@
         "    def ESN_1step(self, s, t):\n",
         "        if t>0:\n",
         "            if hasattr(self,'fbLayer'):\n",
+        "                fb = torch.clone(self.x[self.fbLayer])\n",
         "                self.x[0] = torch.clone((1-self.alpha)*self.x[0]+self.alpha * \\\n",
-        "                    torch.tanh(torch.matmul(s, self.W_in)+torch.matmul(self.x[0], self.W)+torch.matmul(self.x[self.fbLayer], self.W_fb)))\n",
+        "                    torch.tanh(torch.matmul(s, self.W_in)+torch.matmul(self.x[0], self.W)+torch.matmul(fb, self.W_fb)))\n",
         "            else:\n",
         "                self.x[0] = torch.clone((1-self.alpha)*self.x[0]+self.alpha * \\\n",
         "                    torch.tanh(torch.matmul(s, self.W_in)+torch.matmul(self.x[0], self.W)))\n",
@@ -863,7 +864,7 @@
         "            accValClCe_mean=np.mean(A_valClCe[0][(n+1)-par.reportTime:(n+1)])\n",
         "            t=time.time()\n",
         "            \n",
-        "            print(f'Progress: {np.float32(n)/np.float32(par.nEpochs)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
+        "            print(f'Progress: {np.float32(n+1)/np.float32(par.nEpochs)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
         "            print(f'Progress:                                                                                           Mean Tr AccClCe: {accTrClCe_mean}, Mean Val AccClCe: {accValClCe_mean}')\n",
         "\n",
         "    ### Save hidden layer representations for transfer learning\n",
@@ -1359,7 +1360,7 @@
         "            accValClCe_mean=np.mean(A_valClCe[0][(n+1)-par.reportTime:(n+1)])\n",
         "            t=time.time()\n",
         "            \n",
-        "            print(f'Progress: {np.float32(n)/np.float32(par.nEpochs)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
+        "            print(f'Progress: {np.float32(n+1)/np.float32(par.nEpochs)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
         "            print(f'Progress:                                                                                           Mean Tr AccClCe: {accTrClCe_mean}, Mean Val AccClCe: {accValClCe_mean}')\n",
         "\n",
         "    ###############################\n",
@@ -1707,7 +1708,7 @@
         "            accValClCe_mean=np.mean(outA_valClCe[(n+1)-par.reportTime:(n+1)])\n",
         "            t=time.time()\n",
         "            \n",
-        "            print(f'Progress: {np.float32(n)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
+        "            print(f'Progress: {np.float32(n+1)/np.float32(par.nEpisodesOut)*100.:.3}%   Mean Tr Er: {mseTr_mean}, Mean Val Er: {mseVal_mean};   Mean Tr AccTa: {accTrTa_mean}, Mean Val AccTa: {accValTa_mean}')\n",
         "            print(f'Progress:                                                                               Mean Tr AccClCe: {accTrClCe_mean}, Mean Val AccClCe: {accValClCe_mean}')\n",
         "    \n",
         "    wTran = [torch.clone(MOD.Ws[-1]).detach().cpu().numpy(), torch.clone(MOD.bs[-1]).detach().cpu().numpy()]\n",
@@ -1749,7 +1750,6 @@
         "par.fbLayer = 2\n",
         "par.saveFlag_FBWeights = True\n",
         "par.nEpochs = 5000\n",
-        "par.nEpisodesOut = 1000\n",
         "par.reportTime = 250\n",
         "par.Ns = [par.N_esn, 100, 100, 50, par.nClass] # No. neurons in each layer\n",
         "par.nSaveMaxT = par.nEpochs \n",
@@ -1759,6 +1759,9 @@
         "# metric_esn_fb(expName, seed)\n",
         "\n",
         "### Transfer learning\n",
+        "par.nEpisodesOut = 1000\n",
+        "par.etaTransfer = 0.005\n",
+        "par.eta_tau = 5000.0\n",
         "par.Ns = [100,50,par.nClass]\n",
         "par.nInputs = 100\n",
         "par.fbLayer = []\n",
